--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       
 
     
-    <script src="countingwords.js"></script>
+    <script src="js/countingwords.js"></script>
+    <script src="js/primefactor.js"></script>
    
   </body>
 </html>
