--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 
 
-    <script src="js/countingwords.js"></script>
-    <script src="js/primefactor.js"></script>
+    <script src="js/closure.js"></script>
+
 
 </body>
 
