--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
 
 <body>
 
+<ul>
+    <li>one</li>
+    <li>two</li>
+    <li>three</li>
+    <li>four</li>
+</ul>
 
 
 
-    <script src="js/promise.js"></script>
+    <script src="js/es6.js"></script>
 
 
 </body>
